--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 # Public Environment Variables
 NEXT_PUBLIC_CURRENCY=$
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=''
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_aW50ZW50LXNvbGUtMzQuY2xlcmsuYWNjb3VudHMuZGV2JA
 
 # Private Environment Variables
-CLERK_SECRET_KEY=''
-MONGODB_URI=''
+CLERK_SECRET_KEY=sk_test_euhzJY3YHF4bybjNYeyPJBdoogLltdugivixKUMXvB
+MONGODB_URI='mongodb+srv://wathsala:wathsala123@cluster0.7jc2rwy.mongodb.net'
 INNGEST_SIGNING_KEY=''
 INNGEST_EVENT_KEY=''
 # Cloudinary
