--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.20.2",
+    "inngest": "^3.38.0",
     "mongoose": "^8.15.1",
     "next": "15.1.6",
     "react": "^19.0.0",
