--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "BookIt",
+  "name": "bookit",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,7 +12,7 @@
     "@clerk/nextjs": "^6.20.2",
     "inngest": "^3.38.0",
     "mongoose": "^8.15.1",
-    "next": "15.1.6",
+    "next": "^15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.1"
